      with ~mu4e-headers-skip-duplicates~.

    - Bookmarks (as in ~mu4e-bookmarks~) are now simple plists (instead of cl
      structs). ~make-mu4e-bookmark~ has been updated to produce such plists (for
      backward compatibility). A bookmark now looks like a list of e.g. ~(:name
      "My bookmark" :query "banana OR pear" :key ?f)~ this format is a bit easier
      extensible.

    - Improved handling of replies to mailing-lists.

    - For instance, we now recognize an attribute ~:hide t~, which will hide the
      bookmark item from the main-screen (and speedbar), but keep it avilable
      through the completion UI.

    - Furthermore, mu4e now shows unread/all counts for bookmarks in the main
      screen. This is on by default, but can be disabled by setting ~:hide-unread~
      in the bookmark ~plist~ to ~t~.

    - The mu4e <-> mu has been rewritten to communicate using s-expressions,
      with a repl for testing. If you have readline installed, you also get
      history etc.

*** toys

    - Updated the ~mug~ toy UI to use Webkit2/GTK+. Note that this is just a toy
      which is not meant for distribution. ~msg2pdf~ is disabled for now.

** 1.2

   After a bit over a year since version 1.0, here is version 1.2. This is
   mostly a bugfix release, but there are also a number of new features.

*** mu

    - Substantial (algorithmic) speed-up of message-threading; this also (or
      especially) affects mu4e, since threading is the default. See commit
      eb9bfbb1ca3c for all the details, and thanks to Nicolas Avrutin.

    - The query-parser now generates better queries for wildcard searches, by
      using the Xapian machinery for that (when available) rather than
      transforming into regexp queries.

    - The perl backend is hardly used and will be removed; for now we just
      disable it in the build.

    - Allow outputting messages in json format, closely following the sexp