@@ -72,6 +72,9 @@
       "My bookmark" :query "banana OR pear" :key ?f)~ this format is a bit easier
       extensible.
 
+    - Same is true for ~mu4e-maildir-shortcuts~. The older format is still
+      recognized.
+
     - Improved handling of replies to mailing-lists.
 
     - For instance, we now recognize an attribute ~:hide t~, which will hide the
@@ -85,6 +88,15 @@
     - The mu4e <-> mu has been rewritten to communicate using s-expressions,
       with a repl for testing. If you have readline installed, you also get
       history etc.
+
+    - mu4e now defaults to _not_ doing a cleanup after indexing; see
+      ~mu4e-index-cleanup~; reason is that some users have slow (file)systems,
+      making the index operation unnecessary lengthy. More over, files that do not exist
+      are excluded during querying.
+
+      It is recommended to occasionally still clean up the database, perhaps by
+      closing mu4e and calling ~mu index~ from the command-line; this is esp. true
+      if other programs are working in your maildir, behind mu's back.
 
 *** toys
 
